fix overflow issue

--- a/app/css/blocks/motion-demo.styl
+++ b/app/css/blocks/motion-demo.styl
@@ -2,7 +2,7 @@ mobileScaleAmount = .80
 {el = '.motion-demo'}
   overflow       hidden
   +mobile()
-    overflow     visible
+    overflow   visible
   &__header
     font-size       13*PX
     color           white
@@ -29,7 +29,7 @@ mobileScaleAmount = .80
     +mobile()
       width         mobileScaleAmount*ghostWidth*PX
       height        mobileScaleAmount*ghostHeight*PX
-      margin-left  -15.5*gs
+      margin-left  -14.8*gs
       margin-top   -10.2*gs
   &__play
     border              1.8*gs solid transparent
@@ -69,7 +69,7 @@ mobileScaleAmount = .80
       margin-top -11*gs
     @media all and (max-width: 510px)
       left          50%
-      transform     scale(.8) translateX(-61%)
+      transform     scale(.8) translateX(-59%)
   &.is-play
     opacity       1
   &.is-play
