--- a/app/css/pages/main-page.styl
+++ b/app/css/pages/main-page.styl
@@ -12,6 +12,7 @@
     fly()
     +mobile()
       padding 0 2*gs
+      overflow-x hidden
   .motion-lettering
     margin-top    16*gs
     margin-bottom 2*gs
